// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a contract address 1`] = `
AztecAddress {
  "buffer": {
    "data": [
      16,
      254,
      252,
      39,
      166,
      189,
      149,
      143,
      172,
      176,
      163,
      212,
      247,
      210,
      181,
      243,
      184,
      106,
      198,
      189,
      57,
      9,
      223,
      214,
      106,
      194,
      189,
      60,
      7,
      40,
      152,
      129,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 587703305517770651443581700965463419402329990676290745771558099600379869110n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 14753252017424563237038015065402454919037294146339173328174383872613705551896n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 14183899854343735726273072423861389595545367822703803926156437266914765787587n,
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
Object {
  "data": Array [
    3,
    215,
    112,
    230,
    112,
    168,
    8,
    190,
    95,
    206,
    52,
    172,
    46,
    85,
    55,
    190,
    134,
    187,
    169,
    57,
    109,
    253,
    250,
    109,
    224,
    150,
    49,
    156,
    32,
    17,
    205,
    37,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    46,
    34,
    203,
    156,
    120,
    223,
    99,
    48,
    53,
    15,
    204,
    1,
    228,
    99,
    220,
    44,
    229,
    214,
    204,
    179,
    178,
    238,
    165,
    191,
    93,
    247,
    184,
    223,
    45,
    107,
    137,
    24,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes constructor info 1`] = `
Fr {
  "value": 7216897321497646146262929975092090377195732654088850742428710375667397735848n,
}
`;

exports[`abis wasm bindings hashes empty function args 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes function args 1`] = `
Fr {
  "value": 12125610727223956800302813404878728417440563546649886466255076581695454329514n,
}
`;

exports[`abis wasm bindings hashes many function args 1`] = `
Fr {
  "value": 8955236039943388976259759391839453100491522182218493180262383122788045296302n,
}
`;
